css with img adjustment

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 </head>
 
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <img class="triviaImage" src="assets\images\trivia.jpg">
+        <div class="questionBlock"></div>
+    </div>
 
 </body>
 
