fixed random answerSelections array

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div class="container">
 
         <div id="questionBlock"></div>
-        <div id="answerSelections">
+        <div id="answerSelections"></div>
 
-        </div>
+    </div>
 </body>
 
 </html>
